--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lite-server": "^2.3.0"
   },
   "dependencies": {
-    "web3": "^0.20.0"
+    "express": "^4.17.1",
+    "web3": "^0.20.7"
   },
   "keywords": [],
   "description": ""
